--- a/dcms/dcms-core/pom.xml
+++ b/dcms/dcms-core/pom.xml
@@ -20,5 +20,15 @@
   		<version>4.11</version>
   		<scope>test</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>org.eclipse.persistence</groupId>
+  		<artifactId>eclipselink</artifactId>
+  		<version>2.6.0-M3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-orm</artifactId>
+  		<version>4.1.1.RELEASE</version>
+  	</dependency>
   </dependencies>
 </project>
