--- a/dcms/dcms-web/src/main/webapp/WEB-INF/web.xml
+++ b/dcms/dcms-web/src/main/webapp/WEB-INF/web.xml
@@ -2,12 +2,17 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
           http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
-	
 	<display-name>DCMS-Web</display-name>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>WEB-INF/spring/application-context.xml</param-value>
 	</context-param>
+	<resource-ref>
+		<description>DB Connection</description>
+		<res-ref-name>jdbc/DCMSDatasource</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
