--- a/dcms/dcms-core/pom.xml
+++ b/dcms/dcms-core/pom.xml
@@ -77,5 +77,10 @@
 			<artifactId>logback-access</artifactId>
 			<version>1.1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
 	</dependencies>
 </project>
